# simple-package-for-learning-python-packaging

./: README.md  pyproject.toml  requirements-dev.txt  tox.ini
src/splpp/: __init__.py  demo.py  lib.py
tests/: test_demo.py  test_simple.py
